--- a/pages/visitorManager/add.wxml
+++ b/pages/visitorManager/add.wxml
@@ -43,7 +43,7 @@
     {{imgList.length}}/1
   </view>
 </view>
-<v-upload class="upload_view" bind:getPictures="onGetPictures" bind:deletePicture="onDeletePicture" />
+<v-upload maxLength="1" class="upload_view" bind:getPictures="onGetPictures" bind:deletePicture="onDeletePicture" />
 <view class="tip_view">
 	<text class="tip_text">注：请拍照或上传本人清晰头像，以确保刷脸开门的通过率</text>
 </view>
