--- a/pages/accountInfo/index.wxml
+++ b/pages/accountInfo/index.wxml
@@ -7,7 +7,7 @@
 	</view>
 	<view class="line-view"></view>
 	<view class="list_container">
-		<view class="info_list solid-bottom" wx:for="{{listItems}}" wx:key="k" bindtap="onClickItem" data-index="{{index}}">
+		<view class="info_list {{index+1<listItems.length?'solid-bottom':''}}" wx:for="{{listItems}}" wx:key="k" bindtap="onClickItem" data-index="{{index}}">
 			<text class="left_text">{{item.title_text}}</text>
 			<view class="rigth_info">
 				<text class="right_text">{{item.detail_text?item.detail_text:'无'}}</text>
