--- a/pages/notice/list.wxml
+++ b/pages/notice/list.wxml
@@ -6,7 +6,7 @@
 		<v-empty nullTitle="暂无小区风采…" />
 	</view>
 	<l-loadmore show="{{show}}" type="{{type}}" isLeft="{{true}}" wx:if="{{!isNoData}}">
-		<view class="noticeItem" wx:for="{{elegantsArr}}" wx:key="k" bindtap="onElegantDetail" data-index="{{index}}" slot="content">
+		<view class="noticeItem {{index+1<elegantsArr.length?'solid-bottom':''}}" wx:for="{{elegantsArr}}" wx:key="k" bindtap="onElegantDetail" data-index="{{index}}" slot="content">
 			<view class="notice_name">
 				<text class="name_text">{{item.title}}</text>
 				<text class="date_text">{{item.updateTime}}</text>
