--- a/pages/home/index.wxss
+++ b/pages/home/index.wxss
@@ -202,14 +202,13 @@
 
 .notice_name {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 9rpx;
 }
 
-.noticeItem .notice_name text:first-child {
+.name_text {
   font-size: 30rpx;
   color: #2A2C2F;
-  width: 518rpx;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -217,26 +216,23 @@
   line-height: 42rpx;
 }
 
-.noticeItem .notice_name text:last-child {
+.see_box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.see_img {
+  width: 28rpx;
+  height: 28rpx;
+  margin-right: 8rpx;
+}
+
+.date_text {
   flex-shrink: 0;
   font-size: 26rpx;
   font-family: PingFangSC-Regular, PingFang SC;
   font-weight: 400;
   color: #919298;
   line-height: 37rpx;
-}
-
-.noticeItem .content {
-  font-size: 26rpx;
-  font-family: PingFangSC-Regular, PingFang SC;
-  font-weight: 400;
-  line-height: 37rpx;
-  color: #919298;
-  display: -webkit-box;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  word-wrap: break-word;
-  white-space: normal !important;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
 }
