--- a/pages/notice/list.wxml
+++ b/pages/notice/list.wxml
@@ -7,12 +7,15 @@
 	</view>
 	<l-loadmore show="{{show}}" type="{{type}}" isLeft="{{true}}" wx:if="{{!isNoData}}">
 		<view class="noticeItem {{index+1<elegantsArr.length?'solid-bottom':''}}" wx:for="{{elegantsArr}}" wx:key="k" bindtap="onElegantDetail" data-index="{{index}}" slot="content">
-			<view class="notice_name">
+			<view class="notice_name" style="margin-bottom: 15rpx;">
 				<text class="name_text">{{item.title}}</text>
-				<text class="date_text">{{item.updateTime}}</text>
 			</view>
-			<view class="content">
-				<text decode="{{true}}">{{filter.replaceHtml(item.content)}}</text>
+			<view class="notice_name">
+				<text class="date_text">{{item.updateTime}}</text>
+				<view class="see_box">
+					<image class="see_img" src="/images/common/see.png"></image>
+					<text class="date_text">{{item.clickNumber}}</text>
+				</view>
 			</view>
 		</view>
 	</l-loadmore>
