--- a/pages/resident/detail.wxml
+++ b/pages/resident/detail.wxml
@@ -3,7 +3,7 @@
 <view class="detail-list">
   <view class="list-item solid-bottom" style="min-height: 162rpx;">
     <text class="title-text">人员照片</text>
-    <image class="photo_img" src="{{imgPath?imgPath:'/images/mine/icon_avator.png'}}" bindtap="onPreviewTap"></image>
+    <image class="photo_img" mode="aspectFill" src="{{imgPath?imgPath:'/images/mine/icon_avator.png'}}" bindtap="onPreviewTap"></image>
   </view>
   <view class="list-item solid-bottom">
     <text class="title-text">姓名</text>
