--- a/pages/resident/list.wxml
+++ b/pages/resident/list.wxml
@@ -33,7 +33,7 @@
 	<view class="list_item cu-item {{modalName=='move-box-'+ index?'move-cur':''}}" bindtouchstart='ListTouchStart' 
 	bindtouchmove='ListTouchMove' bindtouchend='ListTouchEnd' data-target="move-box-{{index}}" wx:for="{{retentsArr}}" wx:key="k" bindtap="onClickItem" 
 	data-index="{{index}}">
-		<image class="item_img" src="{{retentsFaces[index]?retentsFaces[index]:'/images/mine/icon_avator.png'}}"></image>
+		<image class="item_img" mode="aspectFill" src="{{retentsFaces[index]?retentsFaces[index]:'/images/mine/icon_avator.png'}}"></image>
 		<view class="item_right">
 			<view class="right_top">
 				<text class="name_text">{{item.name}}</text>
